# Doing

./: .gitignore  CMakeLists.txt  README.md  install.sh  main.c  tasks.db
src/: crud_functions.c  crud_functions.h  main.c
